--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <meta name="apple-mobile-web-app-title" content="Податки ФОП">
   <link rel="manifest" href="site.webmanifest">
+  <meta name="description" content="Цей калькулятор дозволяє легко розрахувати податки для ФОП 3 групи. Після вводу суми калькулятор розраховує ЄП та військовий збір.">
+  <meta property="og:image" content="https://syanos.aruseni.com/og_image.png">
+  <meta property="og:title" content="Калькулятор податків ФОП 3 групи">
+  <meta property="og:description" content="Цей калькулятор дозволяє легко розрахувати податки для ФОП 3 групи. Після вводу суми калькулятор розраховує ЄП та військовий збір.">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <style>
     /* Base styling using CSS custom properties for colors */
     :root {
